force-app/main/default/objects/PushTracking__c/PushTracking__c.object-meta.xml
<CustomObject>
    <description>Tracciamento di tutti gli esiti su canale Push inviate da Marketing Cloud</description>
    <label>Push Tracking</label>
    <nameField>
        <displayFormat>PTK-{00000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Push Tracking</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>