force-app/main/default/objects/PushTracking__c/fields/AppName__c.field-meta.xml
<CustomField>
    <fullName>AppName__c</fullName>
    <label>Nome APP</label>
    <length>255</length>
    <type>Text</type>
</CustomField>