force-app/main/default/objects/PushTracking__c/fields/CampaignID__c.field-meta.xml
<CustomField>
    <fullName>CampaignID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ID Campagna</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Push Tracking</relationshipLabel>
    <relationshipName>Push_Tracking</relationshipName>
    <type>Lookup</type>
</CustomField>