force-app/main/default/objects/PushTracking__c/fields/Campaigns__c.field-meta.xml
<CustomField>
    <fullName>Campaigns__c</fullName>
    <label>Nome Campagna</label>
    <length>255</length>
    <type>Text</type>
</CustomField>