force-app/main/default/objects/PushTracking__c/fields/CaseID__c.field-meta.xml
<CustomField>
    <fullName>CaseID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Sarà valorizzato con CaseID</description>
    <label>ID Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Push Tracking</relationshipLabel>
    <relationshipName>Push_Tracking</relationshipName>
    <type>Lookup</type>
</CustomField>