force-app/main/default/objects/PushTracking__c/fields/ContactID__c.field-meta.xml
<CustomField>
    <fullName>ContactID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>ID of the contact that owns the device that received the message but not the ID of the device; one contact could have multiple devices. The SubscriberKey matches the Contacts and Devices ID. The SubscriberKey indicates the subscriber associated with the device when the report is run.</description>
    <label>ContactID</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Push Tracking (ContactID)</relationshipLabel>
    <relationshipName>PushTrackings</relationshipName>
    <type>Lookup</type>
</CustomField>