force-app/main/default/objects/PushTracking__c/fields/ContactKey__c.field-meta.xml
<CustomField>
    <fullName>ContactKey__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>ID of the contact that owns the device that received the message but not the ID of the device; one contact could have multiple devices. The SubscriberKey matches the Contacts and Devices ID. The SubscriberKey indicates the subscriber associated with the device when the report is run.</description>
    <label>ContactKey</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Push Tracking</relationshipLabel>
    <relationshipName>Push_Tracking</relationshipName>
    <type>Lookup</type>
</CustomField>