force-app/main/default/objects/PushTracking__c/fields/DateTimeSend__c.field-meta.xml
<CustomField>
    <fullName>DateTimeSend__c</fullName>
    <description>Date and time, in UTC-6, that the message was sent</description>
    <label>Data di Invio</label>
    <type>Date</type>
</CustomField>