force-app/main/default/objects/PushTracking__c/fields/GeofenceName__c.field-meta.xml
<CustomField>
    <fullName>GeofenceName__c</fullName>
    <description>Name of the geofence that triggered the message</description>
    <label>GeofenceName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>