force-app/main/default/objects/PushTracking__c/fields/InboxMessageOpened__c.field-meta.xml
<CustomField>
    <fullName>InboxMessageOpened__c</fullName>
    <description>Date and time the Inbox was opened</description>
    <label>InboxMessageOpened</label>
    <type>Date</type>
</CustomField>