force-app/main/default/objects/PushTracking__c/fields/MediaAlt__c.field-meta.xml
<CustomField>
    <fullName>MediaAlt__c</fullName>
    <label>MediaAlt</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>