force-app/main/default/objects/PushTracking__c/fields/MessageContent__c.field-meta.xml
<CustomField>
    <fullName>MessageContent__c</fullName>
    <description>Content of the message. This field shows AMPscript, if used</description>
    <label>MessageContent</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>