force-app/main/default/objects/PushTracking__c/fields/MessageOpened__c.field-meta.xml
<CustomField>
    <fullName>MessageOpened__c</fullName>
    <description>Whether the message was opened on the device corresponding to the Device ID</description>
    <label>Apertura</label>
    <length>255</length>
    <type>Text</type>
</CustomField>