force-app/main/default/objects/PushTracking__c/fields/MessageText__c.field-meta.xml
<CustomField>
    <fullName>MessageText__c</fullName>
    <description>Contiene il testo della push ricevuta dal contatto</description>
    <label>Testo Messaggio</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>