force-app/main/default/objects/PushTracking__c/fields/OpenDate__c.field-meta.xml
<CustomField>
    <fullName>OpenDate__c</fullName>
    <description>When the message was opened</description>
    <label>Data Apertura</label>
    <type>Date</type>
</CustomField>