force-app/main/default/objects/PushTracking__c/fields/Platform__c.field-meta.xml
<CustomField>
    <fullName>Platform__c</fullName>
    <description>Operating system of the device</description>
    <label>Sistema Operativo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>