force-app/main/default/objects/PushTracking__c/fields/PlatformVersion__c.field-meta.xml
<CustomField>
    <fullName>PlatformVersion__c</fullName>
    <description>Version of the operating system</description>
    <label>Versione Sistema Operativo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>