force-app/main/default/objects/PushTracking__c/fields/PushJobId__c.field-meta.xml
<CustomField>
    <fullName>PushJobId__c</fullName>
    <description>il campo &quot;job id&quot; rimane sempre lo stesso se push inviata da Customer Journey</description>
    <label>PushJobId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>