force-app/main/default/objects/PushTracking__c/fields/PushTriggeredSendRequestId__c.field-meta.xml
<CustomField>
    <fullName>PushTriggeredSendRequestId__c</fullName>
    <description>Marketing Cloud’s unique identifier for every request. Il campo &quot;request id&quot; è sempre e solo uno, cioè unico, anche se l&apos;utente ha ricevuto più notifiche, quindi per sapere se una persona ha ricevuto più notifiche basterebbe fare una count delle request id raggruppando per contact key</description>
    <externalId>true</externalId>
    <label>PushTriggeredSendRequestId</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>