force-app/main/default/objects/PushTracking__c/fields/ServiceResponse__c.field-meta.xml
<CustomField>
    <fullName>ServiceResponse__c</fullName>
    <label>ServiceResponse</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>