force-app/main/default/objects/PushTracking__c/fields/Template__c.field-meta.xml
<CustomField>
    <fullName>Template__c</fullName>
    <description>Template of the sent message: Outbound, Location Entry, Location Exit, or BeaconTemplate of the sent message: Outbound, Location Entry, Location Exit, or Beacon.</description>
    <label>Template</label>
    <length>255</length>
    <type>Text</type>
</CustomField>