force-app/main/default/objects/PushTracking__c/fields/TimeInApp__c.field-meta.xml
<CustomField>
    <fullName>TimeInApp__c</fullName>
    <description>How long the user spent in the app after opening the message. Measured from the time the subscriber opens the app to the time the app goes into the background.</description>
    <label>TimeInApp</label>
    <length>255</length>
    <type>Text</type>
</CustomField>